==> PaXLiCh/ZX-Spectrum_Tape_Emulator/Firmware/sd.c <==
#include "sd.h"
#include "based.h"
#include "wh1602.h"
#include "language.h"
#define SD_CS_DDR   DDRB
#define SD_CS_PORT  PORTB
#define SD_CS       4
#define SD_DI_DDR   DDRB
#define SD_DI_PORT  PORTB
#define SD_DI       5
#define SD_DO_DDR   DDRB
#define SD_DO_PORT  PORTB
#define SD_DO       6
#define SD_SCK_DDR  DDRB
#define SD_SCK_PORT PORTB
#define SD_SCK      7
#define CMD0  0x40
#define CMD1  (CMD0+1)
#define CMD8  (CMD0+8)
#define CMD9  (CMD0+9)
#define CMD16 (CMD0+16)
#define CMD17 (CMD0+17)
#define CMD55 (CMD0+55)
#define CMD58 (CMD0+58)

static inline uint8_t SD_TransmitData(uint8_t data)
{
	SPDR=data;//передаём
	while(!(SPSR&(1<<SPIF)));//ждём завершения передачи и получения ответа
	uint8_t res=SPDR;
	return(res);
}

void SD_Init(void)
{
	SD_CS_DDR|=(1<<SD_CS);
	SD_DI_DDR|=(1<<SD_DI);
	SD_SCK_DDR|=(1<<SD_SCK);
	SD_DO_DDR&=0xff^(1<<SD_DO);
	//вывод SPI SS в режиме MASTER сконфигурирован как выход и на SPI не влияет
	_delay_ms(1000);//пауза, пока карта не включится
	uint8_t n;
	//шлём не менее 74 импульсов синхронизации при высоком уровне на CS и DI
	SD_CS_PORT|=(1<<SD_CS);
	_delay_ms(500);
	SD_DI_PORT|=(1<<SD_DI);
	for(n=0;n<250;n++)
	{
		SD_SCK_PORT|=(1<<SD_SCK);
		_delay_ms(1);
		SD_SCK_PORT&=0xff^(1<<SD_SCK);
		_delay_ms(1);
	}
	SD_CS_PORT&=0xff^(1<<SD_CS);
	//настраиваем SP
	SPCR=(0<<SPIE)|(1<<SPE)|(0<<DORD)|(1<<MSTR)|(0<<CPOL)|(0<<CPHA)|(0<<SPR1)|(0<<SPR0);
	SPSR=(1<<SPI2X);//удвоенная скорость SPI
	_delay_ms(100);
	
	uint8_t answer[ANSWER_R3_SIZE];//ответ от карты
	bool res;
	//шлём CMD0
	res=SD_SendCommand(CMD0,0x00,0x00,0x00,0x00,ANSWER_R1_SIZE,answer);
	if (res==false || answer[0]!=1)//ошибка
	{
		WH1602_SetTextProgmemUpLine(Text_SD_No_SPI_Up);
		WH1602_SetTextProgmemDownLine(Text_SD_No_SPI_Down);
		while(1);
		return;
	}

	//определяем тип карты
	SDType=SD_TYPE_NONE;
	//шлём CMD8 (ответ будет R3 в режиме SPI)
	res=SD_SendCommand(CMD8,0xAA,0x01,0x00,0x00,ANSWER_R3_SIZE,answer);
	if (res==true && answer[0]==0x01)
	{
		if (!((answer[ANSWER_R3_SIZE-2]&0x0F)==0x01 && answer[ANSWER_R3_SIZE-1]==0xAA))
		{
			WH1602_SetTextProgmemUpLine(Text_SD_No_Response);
			while(1);
			return;
		}
		//шлём ACMD41
		for(n=0;n<65535;n++)
		{
			//шлём ACMD41
			res=SD_SendCommand(CMD55,0x00,0x00,0x00,0x00,ANSWER_R1_SIZE,answer);
			if (res==false || (answer[0]!=0x00 && answer[0]!=0x01))
			{
				WH1602_SetTextProgmemUpLine(Text_SD_No_Response);
				while(1);
				return;
			}
			res=SD_SendCommand(CMD1,0x00,0x00,0x00,0x40,ANSWER_R1_SIZE,answer);
			if (res==true && answer[0]==0x00) break;
		}
		if (n==65535)
		{
			WH1602_SetTextProgmemUpLine(Text_SD_No_Response);
			while(1);
			return;
		}
		//шлём CMD58
		res=SD_SendCommand(CMD58,0x00,0x00,0x00,0x00,ANSWER_R3_SIZE,answer);
		if (res==false)
		{
			WH1602_SetTextProgmemUpLine(Text_SD_No_Response);
			while(1);
			return;
		}
		if (answer[1]&0x40) SDType=SD_TYPE_SD_V2_HC;
		else SDType=SD_TYPE_SD_V2;
	}
	else//карта не ответила на CMD8
	{
		//диаграмма рекомендует слать ACMD41, но совсем старая карта на 16 МБ отказалась с ней работать, при этом ошибку она не формирует.
		//будем такие карты инициализировать только через CMD1, а не через ACMD41
		//шлём ACMD41
		for(n=0;n<65535;n++)
		{
			/*
			//шлём ACMD41, если только это не MMC V3
			if (SDType!=SD_TYPE_MMC_V3)
			{
			res=SD_SendCommand(CMD55,0x00,0x00,0x00,0x00,ANSWER_R1_SIZE,answer);
			if (res==false || (answer[0]!=0x00 && answer[0]!=0x01)) SDType=SD_TYPE_MMC_V3;//карта не знает ACM41, так что теперь шлём только CMD1
			}
			*/
			res=SD_SendCommand(CMD1,0x00,0x00,0x00,0x00,ANSWER_R1_SIZE,answer);
			if (res==true && answer[0]==0x00) break;
		}
		if (n==65535)
		{
			WH1602_SetTextProgmemUpLine(Text_SD_No_Response);
			while(1);
		}
		if (SDType!=SD_TYPE_MMC_V3) SDType=SD_TYPE_SD_V1;
	}
	//задаём размер блока 512 байт
	res=SD_SendCommand(CMD16,0x00,0x00,0x02,0x00,ANSWER_R1_SIZE,answer);

	//инициализация пройдёна успешно
	if (SDType!=SD_TYPE_SD_V2_HC)//узнаем объём карты памяти
	{
		//узнаем объём карты памяти
		uint32_t SD_Size=0;
		if (SD_GetSize(&SD_Size)==false)//ошибка
		{
			WH1602_SetTextProgmemUpLine(Text_SD_Size_Error_Up);
			WH1602_SetTextProgmemDownLine(Text_SD_Size_Error_Down);
			while(1);
			return;
		}
		uint16_t size=(uint16_t)(SD_Size>>20);
		sprintf(String,"%i МБ",size);
		WH1602_SetTextProgmemUpLine(Text_SD_Size);
		WH1602_SetTextDownLine(String);
		_delay_ms(1000);
	}
	for(uint16_t m=0;m<1024;m++) SD_TransmitData(0xff);
}

bool SD_SendCommand(uint8_t cmd,uint8_t b0,uint8_t b1,uint8_t b2,uint8_t b3,uint8_t answer_size,uint8_t *answer)
{
	//старые карты могут не работать, если команду посылать сразу
	SD_TransmitData(0xff);
	SD_TransmitData(0xff);
	//отправляем команду и считаем её CRC7
	uint8_t crc7=0;
	uint8_t cmd_buf[5]={cmd,b3,b2,b1,b0};
	uint16_t n;
	for(n=0;n<5;n++)
	{
		SD_TransmitData(cmd_buf[n]);
		
		uint8_t b=cmd_buf[n];
		for (uint8_t i=0;i<8;i++)
		{
			crc7<<=1;
			if ((b&0x80)^(crc7&0x80)) crc7^=0x09;
			b<<=1;
		}
	}
	crc7=crc7<<1;
	crc7|=1;
	SD_TransmitData(crc7);//CRC
	//карта может ответить не сразу
	//принимаем ответ R1 (старший бит всегда 0)
	for(n=0;n<65535;n++)
	{
		uint8_t res=SD_TransmitData(0xff);
		if ((res&128)==0)
		{
			answer[0]=res;
			break;
		}
		_delay_us(10);
	}
	if (n==65535) return(false);
	for(n=1;n<answer_size;n++)
	{
		answer[n]=SD_TransmitData(0xff);
	}
	SD_TransmitData(0xff);//принимаем CRC
	return(true);//ответ принят
}

bool SD_BeginReadBlock(uint32_t BlockAddr)
{
	if (SDType!=SD_TYPE_SD_V2_HC) BlockAddr<<=9;//умножаем на 512 для старых карт памяти
	//даём команду чтения блока
	uint8_t a1=(uint8_t)((BlockAddr>>24)&0xff);
	uint8_t a2=(uint8_t)((BlockAddr>>16)&0xff);
	uint8_t a3=(uint8_t)((BlockAddr>>8)&0xff);
	uint8_t a4=(uint8_t)(BlockAddr&0xff);
	uint8_t answer[ANSWER_R1_SIZE];
	bool ret=SD_SendCommand(CMD17,a4,a3,a2,a1,ANSWER_R1_SIZE,answer);//посылаем CMD17
	if (ret==false || answer[0]!=0) return(false);//ошибка команды
	SD_TransmitData(0xff);//байтовый промежуток
	//ждём начало поступления данных
	uint16_t n;
	for(n=0;n<65535;n++)
	{
		uint8_t res=SD_TransmitData(0xff);
		if (res==0xfe) break;//маркер получен
		_delay_us(10);
	}
	if (n==65535) return(false);//маркер начала данных не получен
	BlockByteCounter=0;
	return(true);
}

bool SD_ReadBlock(uint32_t BlockAddr,uint8_t *Addr,bool first)
{
	if (SDType!=SD_TYPE_SD_V2_HC) BlockAddr<<=9;//умножаем на 512 для старых карт памяти
	//даём команду чтения блока
	uint8_t a1 = (uint8_t)((BlockAddr >> 24) & 0xff);
	uint8_t a2 = (uint8_t)((BlockAddr >> 16) & 0xff);
	uint8_t a3 = (uint8_t)((BlockAddr >>  8) & 0xff);
	uint8_t a4 = (uint8_t)(BlockAddr & 0xff);
	uint8_t answer[ANSWER_R1_SIZE];
	bool ret = SD_SendCommand(CMD17,a4,a3,a2,a1,ANSWER_R1_SIZE,answer);//посылаем CMD17
	if (ret==false || answer[0]!=0) return(false);//ошибка команды
	SD_TransmitData(0xff);//байтовый промежуток
	//ждём начало поступления данных
	uint16_t n;
	for(n=0;n<65535;n++)
	{
		uint8_t res=SD_TransmitData(0xff);
		if (res==0xfe) break;//маркер получен
		_delay_us(10);
	}
	if (n==65535) return(false);//маркер начала данных не получен
	for(n=0;n<512;n++)
	{
		uint8_t b=SD_TransmitData(0xff);//читаем байт с SD-карты
		if (first==true && n<256)
		{
			*Addr=b;
			Addr++;
		}
		if (first==false && n>=256)
		{
			*Addr=b;
			Addr++;
		}
	}
	//считываем CRC
	SD_TransmitData(0xff);
	SD_TransmitData(0xff);
	return(true);
}
